--- a/resources/css/colmar.css
+++ b/resources/css/colmar.css
@@ -3,19 +3,16 @@
     font-size: 16px;
 }
 
-.navcontainer {
+.fixednav {
     display: flex;
-    flex-direction: row;
-    position: fixed;
-    height: 64px;
+    align-items: center;
+    justify-content: space-between;
     width: 100%;
 }
 
 .leftnav {
     display: inline-flex;
-    position: absolute;
     flex-direction: row;
-    justify-content: flex-start;
     padding-left: 24px;
 }
 
@@ -37,7 +34,5 @@
 
 .rightnav {
     display: inline-flex;
-    justify-content: flex-end;
-    position: absolute;
     font-size: 2rem;
 }
