--- a/resources/css/colmar.css
+++ b/resources/css/colmar.css
@@ -48,3 +48,20 @@
 .rightnav li {
     list-style-type: none;
 }
+
+.learn {
+    display: flex;
+    align-items: center;
+    background-color: lightgray;
+    width: 100%;
+    color: hsl(0,0%,25%);
+}
+
+.banner {
+    width: 60%;
+    padding: 32px 24px;
+}
+
+.learn h1 {
+    font-size: 2.5rem;
+}
