--- a/resources/css/colmar.css
+++ b/resources/css/colmar.css
@@ -69,3 +69,14 @@
 .lorem {
     font-size: 1.75rem;
 }
+
+.start {
+    background-color: hsl(0,0%,25%);
+}
+
+.start a {
+    text-decoration: none;
+    color: white;
+    padding: 0px 16px;
+    font-size: 1.75rem;
+}
