--- a/resources/css/colmar.css
+++ b/resources/css/colmar.css
@@ -64,6 +64,7 @@
 
 .everyday {
     font-size: 2.5rem;
+    font-weight: 600;
 }
 
 .lorem {
@@ -72,11 +73,9 @@
 
 .start {
     background-color: hsl(0,0%,25%);
-}
-
-.start a {
-    text-decoration: none;
     color: white;
-    padding: 0px 16px;
-    font-size: 1.75rem;
+    cursor: pointer;
+    padding: 8px 120px;
+    border: none;
+    font-size: 1.25rem;
 }
