--- a/resources/css/colmar.css
+++ b/resources/css/colmar.css
@@ -79,3 +79,48 @@
     border: none;
     font-size: 1.25rem;
 }
+
+.practice {
+    display: grid;
+    background-color: white;
+    width: 100%;
+    color: hsl(0,0%,25%);
+    grid-template-columns: 60% 40%;
+    grid-auto-rows: auto;
+}
+
+.left {
+    grid-row: 1 / 2;
+}
+
+.left img {
+    padding: 32px 24px;
+    width: 60%;
+}
+
+.practicing {
+    font-size: 2.5rem;
+    font-weight: 600;
+    padding: 0px 0px 24px 24px;
+}
+
+.quote {
+    font-size: 1.25rem;
+    padding-top: 24px;
+    padding-bottom: 32px;
+}
+
+.rightone {
+    grid-row: 1 / 2;
+    grid-column: 2 / 2;
+}
+
+.righttwo {
+    grid-row: 2 / 3;
+    grid-column: 2 / 2;
+}
+
+.rightthree {
+    grid-row: 3 / 4;
+    grid-column: 2 / 2;
+}
